--- a/goals.html
+++ b/goals.html
@@ -2,7 +2,7 @@
 <html>
  <head>
  	<title>Get to know Maggie Hauser</title>
- 	<link rel="stylesheet" href="style sheet.css"
+ 	<link rel="stylesheet" href="style sheet 2.css"
 
 	<!--- Information you don't want to display to users --> 
 
@@ -24,7 +24,8 @@
 		</nav>
 </header>
 <h2> All about me!</h2>
-<p>Hi! My name is Maggie Hauser. I am a student at the University of Wisconsin-Madison. I am a sophomore pursuing a degree in Consumer Behavior and Marketplace Studies. I am also double minoring in Digital Studies and Entrepreneurship. I also love dogs and animals. I have two King Charles Cavalier Spaniels. Their names are Owen and Reggie. In my free time I enjoy spending time with my family and friends! A fun fact about me is that I was the captain of my high school's bowling team!</p>
+<h3> Goals</h3>
+
 <section>
 	<main>
 		
@@ -39,8 +40,26 @@ img {
 </style>
 </head>
 <body>
-		<img src="maggie.png" alt="Maggie Hauser" width="333" height="400" class="center">
-		<p style="color:blue">Explore the rest of my website to learn more about me!</p>
+	<p style="font-size: xx-large;">Entertainment Lawyer!</p>
+	<article>
+
+
+
+	</p>
+		<p>
+		<h3>
+
+	<p style= "color: blue" font= 15px; ></p>
+		<img src="entertainment.jpg" alt="Entertainment lawyer" width="333" height="400" class="left">
+		Image= Courtesy of LawCrossing.com
+		    <div class="text">
+        <h3>My goal in life is to eventually go to law school and become an entertainment lawyer! This is perfect for me so I can be in touch with the media world. I am striving to make connections and network so this can be possible in the future!  <p style="float:left" 
+
+
+
+		><p style="color:blue">Explore the rest of my website to learn more about me!</p>
+
+
 
 		<p>&copy; Copyright 2023</p>
 		</main>
