--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<nav>
 			<li><a href="index.html" >Home</a></li>
-			<li><a href="achievements.html" >Achievements</a></li>
+			<li><a href="Achievements.html" >Achievements</a></li>
 			<li><a href="goals.html" >Goals</a></li>
 			<li><a href="experience.html" >Experience</a></li>
 		</ul>
