--- a/experience.html
+++ b/experience.html
@@ -50,10 +50,12 @@ img {
 		<h3>
 
 	<p style= "color: blue" font= 15px; ></p>
-		<img src="hbo.jpg" alt="HBO MAX" width="333" height="400" class="left">
-		Image= Courtesy of HBOMAX.com
+		<img src="hbo.jpg" align="left"/alt="HBO MAX" width="333" height="250" class="left">
+
+		<figcaption><a href="https://www.hbomax.com/" target="_blank">Image from "HBO MAX"</a/figcaption>
+		
 		    <div class="text">
-        <h3>This past semester I have began working for HBO MAX through Wasserman Next Gen. This oppourtunity allows me to market and expose HBO Max to my fellow students and peers, and educate them on how great it is! This oppourtunity has been very rewarding. It has already taughten me how to further my leadership skills, and my marketing ones as well. Since I want to enter the entertainment world, I think that this is an awesome place to start! Click <a href="https://www.hbomax.com/" target="_blank">here</a> if you want to begin watching some of the best movies and TV shows! <p style="float:left" font=10px;
+        <p style="font-size:medium;"h3>This past semester I have began working for HBO MAX through Wasserman Next Gen. This oppourtunity allows me to market and expose HBO Max to my fellow students and peers, and educate them on how great it is! This oppourtunity has been very rewarding. It has already taughten me how to further my leadership skills, and my marketing ones as well. Since I want to enter the entertainment world, I think that this is an awesome place to start! Click <a href="https://www.hbomax.com/" target="_blank">here</a> if you want to begin watching some of the best movies and TV shows! <p style="float:left" font=10px; 
 
 
 
