--- a/achievements.html
+++ b/achievements.html
@@ -50,13 +50,16 @@ img {
 		<h3>
 
 	<p style= "color: blue" font= 15px; ></p>
-		<img src="osborne.jpg" alt="Osborne and Francis" width="333" height="400" class="left">
-		    <div class="text">
-		    	Image= Courtesy of Osborne & Francis PLLC
-        <h3>I interned at Osborne & Francis PLLC. this past summer in Boca Raton, Florida. I was extremely lucky to be presented this oppourtunity! Within this role, I learned an immense skill set. I also improved my marketing skills. I worked closesly with the lawyers who work there. This has inspired me to go into the law field, an try to purse a career in entertainment law! <p style="float:left" 
-       
+<div style=" width= "333;>
+		<figure>
 
-		><p style="color:blue">Explore the rest of my website to learn more about me!</p>
+		<img src="osborne.jpg" align="left"/alt="Osborne and Francis" width="333" height="220" class="left" padding="40px;">
+		  <figcaption> <a href="https://www.realtoughlawyers.com//" target="_blank">Image from "Osborne & Francis"</a> </figcaption>
+</figure>
+		    <div class="text">
+        <p style="font-size:medium;"h3>I interned at Osborne & Francis PLLC. this past summer in Boca Raton, Florida. I was extremely lucky to be presented this oppourtunity. Within this role, I learned an immense skill set. I also improved my marketing skills. I worked closesly with the lawyers who work there. This has inspired me to go into the law field, an try to purse a career in entertainment law! <p style="float:left" 
+
+		><p style="color:blue";>Explore the rest of my website to learn more about me!</p>
 
 
 
