--- a/goals.html
+++ b/goals.html
@@ -40,7 +40,7 @@ img {
 </style>
 </head>
 <body>
-	<p style="font-size: xx-large;">Entertainment Lawyer!</p>
+	<p style="font-size: xx-large;">Entertainment Lawyer</p>
 	<article>
 
 
@@ -50,14 +50,15 @@ img {
 		<h3>
 
 	<p style= "color: blue" font= 15px; ></p>
-		<img src="entertainment.jpg" alt="Entertainment lawyer" width="333" height="400" class="left">
-		Image= Courtesy of LawCrossing.com
+		<img src="entertainment.jpg" align="right"/alt="Entertainment lawyer" width="275" height="250" class="left">
+		<a href="https://www.lawcrossing.com/article/900047458/What-Is-an-Entertainment-Lawyer/" target="_blank">Image from "Law Crossing"</a> 
 		    <div class="text">
-        <h3>My goal in life is to eventually go to law school and become an entertainment lawyer! This is perfect for me so I can be in touch with the media world. I am striving to make connections and network so this can be possible in the future!  <p style="float:left" 
+        <p style="font-size:large;"h3>My goal in life is to eventually go to law school and become an entertainment lawyer! This is perfect for me so I can be in touch with the media world. I am striving to make connections and network so this can be possible in the future. Right now, I am in the process for searching for an internship so I can obtain more expereience. I have always been involved in the ever-evolving media world, and feel that this job field would be the perfect fit.  <p style="float:left" 
 
 
 
 		><p style="color:blue">Explore the rest of my website to learn more about me!</p>
+
 
 
 
