--- a/achievements.html
+++ b/achievements.html
@@ -43,7 +43,36 @@ img {
 	<p style="font-size: xx-large;">Interning at Osborne & Francis!</p>
 	<article>
 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Text around image</title>
+</head>
+<body>
+ 
 
+  </h3>
+  <br>
+  <table cellspacing="10">
+    <tr>
+      <td>
+        <img src=
+"osborne.jpg"
+width="300"
+height="250"
+          alt="Osborne & Francis"
+      </td>
+      <td>
+          
+<p>
+          <p style="font-size:large;"h3>I interned at Osborne & Francis PLLC. this past summer in Boca Raton, Florida. I was extremely lucky to be presented this oppourtunity. Within this role, I learned an immense skill set. I also improved my marketing skills. I worked closesly with the lawyers who work there. This has inspired me to go into the law field, and try to purse a career in entertainment law! <p style="float:left" 
+        /p>
+  
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
 
 	</p>
 		<p>
@@ -53,13 +82,9 @@ img {
 <div style=" width= "333;>
 		<figure>
 
-		<img src="osborne.jpg" align="left"/alt="Osborne and Francis" width="333" height="220" class="left" padding="40px;">
-		  <figcaption> <a href="https://www.realtoughlawyers.com//" target="_blank">Image from "Osborne & Francis"</a> </figcaption>
-</figure>
-		    <div class="text">
-        <p style="font-size:medium;"h3>I interned at Osborne & Francis PLLC. this past summer in Boca Raton, Florida. I was extremely lucky to be presented this oppourtunity. Within this role, I learned an immense skill set. I also improved my marketing skills. I worked closesly with the lawyers who work there. This has inspired me to go into the law field, an try to purse a career in entertainment law! <p style="float:left" 
+	
 
-		><p style="color:blue";>Explore the rest of my website to learn more about me!</p>
+		<p style="color:blue";>Explore the rest of my website to learn more about me!</p>
 
 
 
