--- a/experience.html
+++ b/experience.html
@@ -43,24 +43,42 @@ img {
 	<p style="font-size: xx-large;">What I have done so far!</p>
 	<article>
 
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Text around image</title>
+</head>
+<body>
+  
+  </h3>
+  <br>
+  <table cellspacing="10">
+    <tr>
+      <td>
+        <img src=
+"hbo.jpg"
+width="300"
+height="250"
+          alt="HBO Max">
+      </td>
+      <td>
+          
+<p>
+          <p style="font-size:large;"h3>This past semester I have began working for HBO MAX through Wasserman Next Gen. This oppourtunity allows me to market and expose HBO Max to my fellow students and peers, and educate them on how great it is! This oppourtunity has been very rewarding. It has already taughten me how to further my leadership skills, and my marketing ones as well. Since I want to enter the entertainment world, I think that this is an awesome place to start! Click <a href="https://www.hbomax.com/" target="_blank">here</a> if you want to begin watching some of the best movies and TV shows!
+        </p>
+  
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
 
 	</p>
 		<p>
 		<h3>
 
-	<p style= "color: blue" font= 15px; ></p>
-		<img src="hbo.jpg" align="left"/alt="HBO MAX" width="333" height="250" class="left">
 
-		<figcaption><a href="https://www.hbomax.com/" target="_blank">Image from "HBO MAX"</a/figcaption>
-		
-		    <div class="text">
-        <p style="font-size:medium;"h3>This past semester I have began working for HBO MAX through Wasserman Next Gen. This oppourtunity allows me to market and expose HBO Max to my fellow students and peers, and educate them on how great it is! This oppourtunity has been very rewarding. It has already taughten me how to further my leadership skills, and my marketing ones as well. Since I want to enter the entertainment world, I think that this is an awesome place to start! Click <a href="https://www.hbomax.com/" target="_blank">here</a> if you want to begin watching some of the best movies and TV shows! <p style="float:left" font=10px; 
-
-
-
-
-		><p style="color:blue">Explore the rest of my website to learn more about me!</p>
+		<p style="color:blue">Explore the rest of my website to learn more about me!</p>
 
 
 
