--- a/goals.html
+++ b/goals.html
@@ -43,21 +43,47 @@ img {
 	<p style="font-size: xx-large;">Entertainment Lawyer</p>
 	<article>
 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Text around image</title>
+</head>
+<body>
 
+  </h3>
+  <br>
+  <table cellspacing="10">
+    <tr>
+      <td>
+        <img src=
+"entertainment.jpg"
+width="300"
+height="250"
+          alt="Entertainment Lawyer">
+      </td>
+      <td>
+          
+<p>
+          <p style="font-size:large;"h3>My goal in life is to eventually go to law school and become an entertainment lawyer! This is perfect for me so I can be in touch with the media world. I am striving to make connections and network so this can be possible in the future. Right now, I am in the process for searching for an internship so I can obtain more expereience. I have always been involved in the ever-evolving media world, and feel that this job field would be the perfect fit.
+        </p>
+  
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
 
 	</p>
 		<p>
 		<h3>
 
 	<p style= "color: blue" font= 15px; ></p>
-		<img src="entertainment.jpg" align="right"/alt="Entertainment lawyer" width="275" height="250" class="left">
-		<a href="https://www.lawcrossing.com/article/900047458/What-Is-an-Entertainment-Lawyer/" target="_blank">Image from "Law Crossing"</a> 
-		    <div class="text">
-        <p style="font-size:large;"h3>My goal in life is to eventually go to law school and become an entertainment lawyer! This is perfect for me so I can be in touch with the media world. I am striving to make connections and network so this can be possible in the future. Right now, I am in the process for searching for an internship so I can obtain more expereience. I have always been involved in the ever-evolving media world, and feel that this job field would be the perfect fit.  <p style="float:left" 
+		
+		<a href="https://www.lawcrossing.com/article/900047458/What-Is-an-Entertainment-Lawyer/" target="_blank">Image from "Law Crossing"
 
 
 
-		><p style="color:blue">Explore the rest of my website to learn more about me!</p>
+		<p style="color:blue">Explore the rest of my website to learn more about me!</p>
 
 
 
