--- a/achievements.html
+++ b/achievements.html
@@ -56,11 +56,10 @@ img {
   <table cellspacing="10">
     <tr>
       <td>
-        <img src=
-"osborne.jpg"
-width="300"
-height="250"
-          alt="Osborne & Francis"
+      	      	<figure>
+  <img src="osborne.jpg" alt="osborne & francis" width="300" height="250">
+  <figcaption><a href="https://www.realtoughlawyers.com" target="_blank">Image from Osborne & Francis</figcaption>
+</figure>
       </td>
       <td>
           
