--- a/experience.html
+++ b/experience.html
@@ -55,11 +55,11 @@ img {
   <table cellspacing="10">
     <tr>
       <td>
-        <img src=
-"hbo.jpg"
-width="300"
-height="250"
-          alt="HBO Max">
+      	<figure>
+  <img src="hbo.jpg" alt="HBOMAX" width="300" height="250">
+  <figcaption><a href="https://www.hbomax.com" target="_blank">Image from HBO Max</figcaption>
+</figure>
+
       </td>
       <td>
           
