--- a/goals.html
+++ b/goals.html
@@ -18,9 +18,6 @@
 			<li><a href="experience.html" >Experience</a></li>
 		</ul>
 
-
-
-
 		</nav>
 </header>
 <h2> All about me!</h2>
@@ -49,23 +46,35 @@ img {
   <title>Text around image</title>
 </head>
 <body>
+ 
 
   </h3>
   <br>
   <table cellspacing="10">
     <tr>
       <td>
-        <img src=
-"entertainment.jpg"
-width="300"
-height="250"
-          alt="Entertainment Lawyer">
+
+         
       </td>
       <td>
           
 <p>
           <p style="font-size:large;"h3>My goal in life is to eventually go to law school and become an entertainment lawyer! This is perfect for me so I can be in touch with the media world. I am striving to make connections and network so this can be possible in the future. Right now, I am in the process for searching for an internship so I can obtain more expereience. I have always been involved in the ever-evolving media world, and feel that this job field would be the perfect fit.
         </p>
+
+
+  
+</style>
+</head>
+<body>
+
+<figure>
+  <img src="entertainment.jpg" alt="Entertainment" width="300" height="250">
+  <figcaption><a href="https://www.lawcrossing.com/article/900047458/What-Is-an-Entertainment-Lawyer/" target="_blank">Image from "Law Crossing"</figcaption>
+</figure>
+
+</body>
+</html>
   
       </td>
     </tr>
@@ -79,7 +88,6 @@ height="250"
 
 	<p style= "color: blue" font= 15px; ></p>
 		
-		<a href="https://www.lawcrossing.com/article/900047458/What-Is-an-Entertainment-Lawyer/" target="_blank">Image from "Law Crossing"
 
 
 
