--- a/experience.html
+++ b/experience.html
@@ -56,8 +56,8 @@ img {
     <tr>
       <td>
       	<figure>
-  <img src="hbo.jpg" alt="HBOMAX" width="300" height="250">
-  <figcaption><a href="https://www.hbomax.com" target="_blank">Image from HBO Max</figcaption>
+  <img src="hbo max.jpg" alt="HBOMAX" width="300" height="250">
+  <figcaption><a href="https://commons.wikimedia.org/wiki/File:%D8%A7%D8%AA%D8%B4_%D8%A8%D9%8A_%D8%A7%D9%88_%D9%85%D8%A7%D9%83%D8%B3.png" target="_blank">Image:HBO Max by Wikimedia Commons, (CC BY-SA 4.0) </figcaption>
 </figure>
 
       </td>
@@ -70,6 +70,13 @@ img {
       </td>
     </tr>
   </table>
+
+  <dl>
+  	<p><b><dt>HBO Max </dt></b></p>
+  	<dd>-A media streaming service with an abundance of different movies and TV shows <dd> 
+  		<p><b><dt>Wasserman Next Gen </dt></b></p>
+  		<dd>-A company connecting students to different platforms to creatively market and spread word of their company </dd>
+  	</dl>
 </body>
 </html>
 
