--- a/goals.html
+++ b/goals.html
@@ -2,9 +2,9 @@
 <html>
  <head>
  	<title>Get to know Maggie Hauser</title>
- 	<link rel="stylesheet" href="style sheet 2.css"
+ 	<link rel="stylesheet" href="stylesheet2.css"
 
-	<!--- Information you don't want to display to users --> 
+	> 
 
 </head>
 <body>
@@ -16,18 +16,19 @@
 			<li><a href="achievements.html" >Achievements</a></li>
 			<li><a href="goals.html" >Goals</a></li>
 			<li><a href="experience.html" >Experience</a></li>
-		</ul>
+		
 
 		</nav>
 </header>
 <h2> All about me!</h2>
 <h3> Goals</h3>
 
+<main>
 <section>
-	<main>
 		
+
+
 		<p style= "color: blue"></p>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 img {
   display: block;
@@ -35,20 +36,14 @@ img {
   margin-right: auto;
 }
 </style>
-</head>
 <body>
 	<p style="font-size: xx-large;">Entertainment Lawyer</p>
 	<article>
 
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Text around image</title>
-</head>
 <body>
  
-
-  </h3>
   <br>
   <table cellspacing="10">
     <tr>
@@ -63,6 +58,7 @@ img {
         </p>
 
 
+
   
 </style>
 </head>
@@ -70,7 +66,7 @@ img {
 
 <figure>
   <img src="entertainment.jpg" alt="Entertainment" width="300" height="250">
-  <figcaption><a href="https://www.lawcrossing.com/article/900047458/What-Is-an-Entertainment-Lawyer/" target="_blank">Image from "Law Crossing"</figcaption>
+  <figcaption><a href="https://www.stockvault.net/photo/252674/legal-concept-illustration" target="_blank">Image: by Stockvault (CC0 1.0)</figcaption>
 </figure>
 
 </body>
@@ -86,11 +82,25 @@ img {
 		<p>
 		<h3>
 
-	<p style= "color: blue" font= 15px; ></p>
+	<p style= "color: blue" font= 10x; ></p>
+
+<html>
+<body>
+
+<h2>Categories I can potentially work in:</h2>
+
+<ul style="list-style-type:disc;">
+  <li>-Employment Contracts</li>
+  <li>-Trademark</li>
+  <li>-Licensing</li>
+</ul>  
+
+</body>
+</html>
 		
 
 
-
+<p style= "color: blue" font= 15px; ></p>
 		<p style="color:blue">Explore the rest of my website to learn more about me!</p>
 
 
